# dart_webgpu

./: .gitignore  README.md  analysis_options.yaml  build_libwebgpu.py  pubspec.yaml
example/: webgpu_compute_example.dart
example/window/: webgpu_window_example.dart  webgpu_window_texture.dart  webgpu_window_triangle.dart
lib/: webgpu.dart
lib/ffi/: ffi_webgpu.dart  wgpu_config.dart  wgpu_library.dart
lib/webgpu/: _binding_layout_type.dart  _map_util.dart  adapter.dart  address_mode.dart  bind_group.dart  bind_group_entry.dart  bind_group_layout.dart  bind_group_layout_entry.dart  blend_component.dart  blend_factor.dart  blend_operation.dart  blend_state.dart  buffer.dart  buffer_binding_layout.dart  buffer_binding_type.dart  buffer_range.dart  buffer_usage.dart  color_target_state.dart  color_write.dart  command_buffer.dart  command_encoder.dart  compare_function.dart  compute_pass_descriptor.dart  compute_pass_encoder.dart  compute_pipeline.dart  compute_pipeline_descriptor.dart  cull_mode.dart  depth_stencil_state.dart  device.dart  device_lost_info.dart  device_lost_reason.dart  error_filter.dart  error_type.dart  external_texture_binding_layout.dart  filter_mode.dart  fragment_state.dart  front_face.dart  gpu_adapter.dart  gpu_address_mode.dart  gpu_bind_group.dart  (+131 more)
lib/wgpu/: adapter.dart  adapter_info.dart  adapter_options.dart  bind_group.dart  bind_group_layout.dart  buffer.dart  buffer_binding_type.dart  buffer_descriptor.dart  buffer_mapped_state.dart  buffer_range.dart  buffer_usage.dart  buffer_usage_flags.dart  command_buffer.dart  command_encoder.dart  compute_pass_encoder.dart  compute_pipeline.dart  device.dart  device_descriptor.dart  device_lost_info.dart  error_filter.dart  extent_3d.dart  features.dart  limits.dart  map_mode.dart  pipeline_layout.dart  power_preference.dart  queue.dart  queue_descriptor.dart  shader_module.dart  shader_module_compilation_hint.dart  shader_module_descriptor.dart  shader_state.dart  wgpu_object.dart
lib/window/: gpu_window.dart  gpu_window_context.dart  window.dart  window_context.dart
libwebgpu/: CMakeLists.txt  README.md  __init__.py  build_dawn.py  build_libwebgpu.py  libwebgpu.def
libwebgpu/lib/: lib_webgpu.h  lib_webgpu_dart.h  lib_webgpu_dawn.h  lib_webgpu_fwd.h
libwebgpu/lib/src/: lib_webgpu_dart.cpp
libwebgpu/src/: lib_webgpu.h  lib_webgpu_dawn.cpp
test/: adapter_test.dart  buffer_test.dart  command_encoder_test.dart  device_test.dart  map_util.dart  mipmap_generation_test.dart  test_dawn.dart  test_render_pipeline.dart  test_webgpu.dart
